# 27_4_3

./: CMakeLists.txt  README.md  main.cpp
includes/: Base.h  Classes.h  Manager.h  Supervisor.h  Worker.h  constance.h  utilities.h
src/: Base.cpp  CMakeLists.txt  Manager.cpp  Supervisor.cpp  Worker.cpp  utilities.cpp
